# dicServer

./: CMakeLists.txt  README.md  client.cpp  database_manager.cpp  database_manager.hpp  message.hpp  network.cpp  server.cpp
src/: client.cpp  client.hpp  database_manager.cpp  main.cpp  server  server.cpp  server.hpp
src/client/src/: main.cpp  network.cpp
src/server/src/: database_manager.hpp
